--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container">
         <div class="flex-text">
             <h1>Join the community</h1>
-            <p>Explore all three ways to visit Facebook Horizon <br> with Oculus VR headsets. </p>
+            <p>Explore all three ways to visit Facebook Horizon with Oculus VR headsets. </p>
         </div>
 
         <div class="flex-image">
